--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
 
     <br><h3><a href="speakers/toobin.html">Jeffrey Toobin</a></h3>
 
+    <h3>November<br><a href="speakers/sorkin.html">Andrew Ross Sorkin</a></h3>
+    <img src="images/sorkin75.jpg" alt="Andrew Ross Sorkin photo">
+    <h3>January<br><a href="speakers/chua.html">Amy Chua</a></h3>
+    <img src="images/chua75.jpg" alt="Amy Chua photo">
 
 </main>
 
