--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
 
     <h3>November<br></h3>
     <img src="images/sorkin75.jpg" alt="Andrew Ross Sorkin photo">
-    <br><a href="speakers/sorkin.html">Andrew Ross Sorkin</a>
+    <br><h3><a href="speakers/sorkin.html">Andrew Ross Sorkin</a></h3>
 
     <h3>January<br></h3>
     <img src="images/chua75.jpg" alt="Amy Chua photo">
-    <br><a href="speakers/chua.html">Amy Chua</a>
+    <br><h3><a href="speakers/chua.html">Amy Chua</a></h3>
 </main>
 
 <footer>
