--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <header>
     <img src="images/town_hall_logo.gif" alt="Town Hall logo" height="80">
     <h2>San Joaquin Valley Town Hall</h2>
-    Celebrating our 75<span class="shadow"><sup>th</sup> Year
+    Celebrating our 75<span class="shadow"><sup>th</sup></span> Year
 </header>
 <main>
     <h2>Our Mission</h2>
